quito javascript:void(0)

--- a/html/formulario.html
+++ b/html/formulario.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <form id="form" method="post" action="javascript:void(0)">
+    <form id="form">
       <a href="../index.html">
         <img id="logo" src="../img/clinica-logo.png" alt="Logo.clinica" />
       </a>
@@ -136,10 +136,6 @@
         </div>
       </div>
     </form>
-
-    <div id="small-card-left" class="card"></div>
-    <div id="medium-card-left" class="card"></div>
-    <div id="large-card-right" class="card"></div>
 
     <script src="../js/formulario.js"></script>
   </body>
